--- a/rio.html
+++ b/rio.html
@@ -32,11 +32,10 @@
   </div>
   <div class="container">
     <div class="center">
-      <span class="clock" data-timezone="America/Curacao"></span>
-      <p class='local'>WILLEMSTAD</p>
+      <span class="clock" data-timezone="America/Sao_Paulo"></span>
+      <p class='local'>RIO DE JANERIO</p>
     </div>
   </div>
-
 
 </body>
 
