--- a/tokyo.html
+++ b/tokyo.html
@@ -32,11 +32,10 @@
   </div>
   <div class="container">
     <div class="center">
-      <span class="clock" data-timezone="America/Curacao"></span>
-      <p class='local'>WILLEMSTAD</p>
+      <span class="clock" data-timezone="Asia/Tokyo"></span>
+      <p class='local'>TOKYO 東京</p>
     </div>
   </div>
-
 
 </body>
 
