--- a/seoul.html
+++ b/seoul.html
@@ -23,10 +23,12 @@
 </head>
 <body onload="updateClocks()">
   <div class='navcentre'>
+    <a href='willemstad.html' class='link'>Willemstad</a>
+    <a href='rio.html' class='link'>Rio</a>
     <a href='index.html' class='link'>Edinburgh</a>
     <a href='hangzhou.html' class='link'>Hangzhou</a>
-    <a href='willemstad.html' class='link'>Willemstad</a>
     <a href='seoul.html' class='link'>Seoul</a>
+    <a href='tokyo.html' class='link'>Tokyo</a>
   </div>
   <div class="container">
     <div class="center">
@@ -37,6 +39,6 @@
 
 </body>
 
-<!--<footer><img src="NBNDWider.png" alt="Not Bad Industrial Logo" class="logo"></footer>-->
+<footer><img src="NBNDWider.png" alt="Not Bad Industrial Logo" class="logo"></footer>
 
 </html>
